force-app/main/default/objects/Assets__c/Assets__c.object-meta.xml
<CustomObject>
    <label>資産</label>
    <nameField>
        <label>資産名称</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>