force-app/main/default/objects/Assets__c/fields/AssetManagementNumber__c.field-meta.xml
<CustomField>
    <fullName>AssetManagementNumber__c</fullName>
    <label>資産管理番号</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>