force-app/main/default/objects/Assets__c/fields/BarcodeNumber__c.field-meta.xml
<CustomField>
    <fullName>BarcodeNumber__c</fullName>
    <label>バーコード番号</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>