force-app/main/default/objects/Assets__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <label>説明</label>
    <length>30000</length>
    <type>Html</type>
</CustomField>