force-app/main/default/objects/Assets__c/fields/InstallationLocation__c.field-meta.xml
<CustomField>
    <fullName>InstallationLocation__c</fullName>
    <label>設置場所</label>
    <length>255</length>
    <type>Text</type>
</CustomField>