force-app/main/default/objects/Assets__c/fields/InventoryTarget__c.field-meta.xml
<CustomField>
    <fullName>InventoryTarget__c</fullName>
    <defaultValue>true</defaultValue>
    <label>棚卸対象</label>
    <type>Checkbox</type>
</CustomField>