force-app/main/default/objects/Assets__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>AssetManagementNumber__c</columns>
    <columns>BarcodeNumber__c</columns>
    <columns>User__c</columns>
    <columns>InstallationLocation__c</columns>
    <columns>InventoryTarget__c</columns>
    <filterScope>Everything</filterScope>
    <label>すべて選択</label>
</ListView>